<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.home.HomeModeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/title_home"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/imgSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                android:src="@drawable/search" />

            <ImageButton
                android:id="@+id/imgNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingEnd="5dp"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                android:src="@drawable/notification" />

        </LinearLayout>


    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/leftSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"

                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@id/profileCard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currentDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_15_february"
                        android:textColor="@color/purple_primary" />

                    <TextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        android:fontFamily="@font/quicksand_regular"
                        android:text="@string/welcome_krystal0819"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_regular"
                        android:text="@string/how_are_you_today"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/profileCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:strokeColor="#6FAAAAAA"
                    tools:ignore="RelativeOverlap">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgUser"
                            android:layout_width="43dp"
                            android:layout_height="43dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/haz"
                            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                            app:strokeColor="@color/white"
                            app:strokeWidth="1dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="3dp"
                            android:text="@string/profile"
                            android:textColor="@color/black"
                            android:textSize="13sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/quicksand_regular"
                android:text="Your Moods Today"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/rvMyMoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/history_item" />

            <TextView
                android:id="@+id/tvNoMyDataFound"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center"
                android:text="No Mood Found"
                android:textSize="14sp" />

            <include
                android:id="@+id/petAnimationContainer"
                layout="@layout/fragment_pet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/rvFollowingMoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/history_item" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>